labs/03-kyverno-policies/04-dev-label-mutate/dev-label-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: dev-label-policy
spec:
  rules:
    - name: check-dev-label
      match:
        any:
          - resources:
              kinds:
                - HTTPRoute
              namespaces:
                - dev
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              +(platform/environment): dev
