labs/03-kyverno-policies/04-dev-label-mutate/test-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-httproute
  namespace: dev
spec:
  parentRefs:
    - name: my-gateway
      namespace: kgateway-system
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /status/200
      backendRefs:
        - name: httpbin
          port: 8000
